# Psy-Fi

./: .env.example  .env.render.example  .gcloudignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  LICENSE  MOBILE_PWA_GUIDE.md  Procfile  QUICK_DEPLOY.md  README.md  RENDER_DEPLOY.md  app.yaml  azure-deploy.json  azure-pipelines.yml  azure.yaml  azuredeploy.json  cloudbuild.yaml  deploy-buttons.md  deployment_status.md  docker-compose.yml  fly.toml  nginx.conf  pyproject.toml  railway.json  render.button.yaml  render.yaml  requirements-deploy.txt  requirements-midi.txt  requirements.txt  startup.txt  test_deployment_configs.py  test_startup.py
.github/workflows/: azure-webapps-python.yml  tests.yml
docs/: FIGMA_GUIDE.md  MIDI.md  README_SNIPPETS.md
docs/style/: psyfi-colors.css  psyfi-components.css  psyfi-effects.css  psyfi-typography.css
examples/: midi_api_client.py  midi_basic.py  midi_daw_integration.py
psyfi_api/: __init__.py  main.py
psyfi_api/routers/: __init__.py  admin.py  midi.py  simulate.py
psyfi_api/static/: app.js  manifest.json  style.css  sw.js
psyfi_api/templates/: admin.html  index.html
psyfi_core/: __init__.py  config.py
psyfi_core/abx_core/: __init__.py  errors.py  metrics.py  provenance.py  runtime.py
psyfi_core/engines/: __init__.py  archetype_phi.py  attention_phi.py  (+18 more)
scripts/: README_RENDER_API.md  deploy.sh  render_deploy.py  run_api.sh  run_dev_server.py
tests/: __init__.py  test_api_routes.py  test_engines_determinism.py  test_render_yaml.py  test_resonance_frame.py  test_sigil_valence_schema.py
(+15 files in other folders)
